# angkot-hackaton-balikpapan-2023

admin/: index.html  package-lock.json  package.json  tsconfig.json
admin/src/: App.tsx  Form.tsx  Login.tsx  RouteEdit.tsx  RouteIndex.tsx  TestPlotterV2.tsx  index.css  main.tsx
app/: README.md  pubspec.yaml
app/angkot_ku/: pubspec.yaml
app/angkot_ku/android/app/: build.gradle
app/angkot_ku/ios/Runner/: Info.plist
app/angkot_ku/lib/: constant.dart  location_widget.dart  main.dart  maps.dart
app/angkot_ku/lib/angkot/: angkot_home_layout.dart  angkot_review_layout.dart
app/angkot_ku/lib/authentication/: login_layout.dart  login_layout_bug.dart  register_layout.dart  register_layout_bug.dart
app/angkot_ku/lib/client/: ApiClient.dart  User.dart  VehicleType.dart
app/angkot_ku/lib/delete/: dummy_route.dart  route.dart
app/angkot_ku/lib/driver/: driver_map_layout.dart
app/angkot_ku/lib/routes/: angkot_routes_layout.dart  route_layout.dart
app/angkot_ku/lib/temp/: dummy_route.dart  route.dart
app/angkot_ku/lib/user/: home_user.dart  user_angkot_layout.dart  user_bis_layout.dart  user_layout.dart  user_map_layout.dart
app/angkot_ku/linux/: my_application.cc
app/angkot_ku/test/: widget_test.dart
app/angkot_ku/web/: index.html
app/angkot_ku/windows/: CMakeLists.txt
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: location_widget.dart  main.dart  maps.dart
app/lib/angkot/: angkot_home_layout.dart
app/lib/authentication/: login_layout.dart  register_layout.dart
app/lib/client/: ApiClient.dart  Authenticated.dart  Role.dart
app/lib/driver/: driver_log_layout.dart  driver_map_layout.dart
app/lib/routes/: route_layout.dart
app/lib/temp/: dummy_route.dart  route.dart
app/lib/user/: user_layout.dart  user_map_layout.dart
app/linux/: CMakeLists.txt
app/macos/Runner.xcodeproj/: project.pbxproj
app/test/: widget_test.dart
app/web/: manifest.json
server/: Cargo.toml
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20221126_154332_create_user_table.rs  m20221126_172825_create_role_table.rs  m20221126_172838_create_user_role_table.rs  m20230318_135509_create_route_table.rs
server/src/: error.rs  geo.rs  lib.rs  main.rs  session.rs  user.rs
server/src/api/v1/: auth.rs  mod.rs  role.rs  route.rs
server/src/entity/: mod.rs  prelude.rs  role.rs  route.rs  sea_orm_active_enums.rs  user.rs  user_role.rs
(+9 files in other folders)
