[package]
name = "angkot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.11", features = ["ws", "macros"] }
axum-auth = "0.4.0"

tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
futures = "0.3"

serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"

tower-http = { version = "0.4.0", features = ["trace"] }
dotenvy = "0.15.6"

thiserror = "1.0"
anyhow = "1.0"

async-channel = "1.7"
parking_lot = "0.12"

nanoid = "0.4"
geoutils = "0.5"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

migration = { path = "./migration" }

rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8.5"
argon2 = "0.5.0"
password-hash = { version = "0.5.0", features = ["std"] }

validator = { version = "0.16.0", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4"] }

[dependencies.sea-orm]
version = "0.11.0"
features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "sqlx-sqlite",
    "sqlx-mysql",
]
[workspace]
members = ['migration']

